@@ -161,6 +161,7 @@ For instance, add `turn-on-font-lock' to enable syntax highlighting."
 ;    (list pure-prompt-regexp 0 'font-lock-preprocessor-face t)
    (list pure-msg-regexp 0 'font-lock-warning-face t)
    (list "::\\([A-Za-z_][A-Za-z_0-9]*\\)" 1 'font-lock-type-face)
+   (list "\\<\\(catch\\|throw\\)\\>" 0 'font-lock-builtin-face)
    (list
     (concat "\\<\\("
 	    "case\\|e\\(lse\\|nd\\|xtern\\)\\|i\\(f\\|nfix[lr]?\\)\\|let\\|"
@@ -174,6 +175,7 @@ For instance, add `turn-on-font-lock' to enable syntax highlighting."
   (list
    (list "^#!.*" 0 'font-lock-comment-face t)
    (list "::\\([A-Za-z_][A-Za-z_0-9]*\\)" 1 'font-lock-type-face)
+   (list "\\<\\(catch\\|throw\\)\\>" 0 'font-lock-builtin-face)
    (list
     (concat "\\<\\("
 	    "case\\|e\\(lse\\|nd\\|xtern\\)\\|i\\(f\\|nfix[lr]?\\)\\|let\\|"
